public/styles/style.css
@import url(./amplication-font.css);
:root {
  --black60: #444b66;
  --black80: #2c3249;
  --black90: #22273c;
  --hover: #4a16da;
  --blue: #007bff;
  --indigo: #6610f2;
  --purple: #6f42c1;
  --pink: #e83e8c;
  --red: #dc3545;
  --orange: #fd7e14;
  --yellow: #ffc107;
  --green: #28a745;
  --teal: #20c997;
  --cyan: #17a2b8;
  --white: #ffffff;
  --gray: #6c757d;
  --gray-dark: #343a40;
  --primary: #7950ed;
  --secondary: #b8b8c6;
  --success: #31c587;
  --info: #20a4f3;
  --warning: #f6aa50;
  --danger: #e93c51;
  --light: #f4f4f7;
  --dark: #15192c;
  --breakpoint-xs: 0;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  font-family: sans-serif;
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

article,
aside,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section {
  display: block;
}

body {
  margin: 0;
  font-family: var(--font-family-sans-serif);
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: var(--white);
  text-align: left;
  background-color: var(--white);
}

.pricing-table{
  width: 100%;
}

.pricing-table td {
  height: 5rem;
  padding: 24px;
  position: relative;
  vertical-align: middle;
  width: 25%;
}

.pricing-table td:before {
  position: absolute;
  top:0;
  left: 0;
  bottom: -1px;
  right:-1px;
  content:"";
  display: block;
  border: 1px solid var(--black60);
  background: var(--black90);
  z-index: -1;
}


.pricing-table td.highlight:before {
  background-color: var(--black80);
}

.pricing-table thead td {
  height: inherit;
}

.pricing-table thead td:first-child:before {
  border-top-left-radius: 8px;
}

.pricing-table thead td:last-child:before {
  border-top-right-radius: 8px;
}

.pricing-table thead h3 {
  margin-bottom: 16px;
  margin-top: 0;
}

.pricing-table thead p {
  margin-bottom: 8px;
}

@media (max-width: 992px) {
  .pricing-table td {
    padding: 16px;
  }

  .pricing-table thead .chip {
    margin: 0;
  }

  .pricing-table thead h3 {
    margin-bottom: 8px;
    margin-top: 4px;
  }
}

.pricing-table tfoot tr:last-child td:first-child:before {
  border-bottom-left-radius: 8px;
}

.pricing-table tfoot tr:last-child td:last-child:before {
  border-bottom-right-radius: 8px;
}

[tabindex="-1"]:focus:not(:focus-visible) {
  outline: 0 !important;
}
.amplication-base hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
.amplication-base h1,
.amplication-base h2,
.amplication-base h3,
.amplication-base h4,
.amplication-base h5,
.amplication-base h6 {
  margin-top: 0;
  margin-bottom: 0.5rem;
}
.amplication-base p {
  margin-top: 0;
  margin-bottom: 1rem;
}
.amplication-base abbr[title],
.amplication-base abbr[data-original-title] {
  text-decoration: underline dotted;
  cursor: help;
  border-bottom: 0;
  text-decoration-skip-ink: none;
}
.amplication-base address {
  margin-bottom: 1rem;
  font-style: normal;
  line-height: inherit;
}
.amplication-base ol,
.amplication-base ul,
.amplication-base dl {
  margin-top: 0;
  margin-bottom: 1rem;
}
.amplication-base ol ol,
.amplication-base ul ul,
.amplication-base ol ul,
.amplication-base ul ol {
  margin-bottom: 0;
}
.amplication-base dt {
  font-weight: 700;
}
.amplication-base dd {
  margin-bottom: 0.5rem;
  margin-left: 0;
}
.amplication-base blockquote {
  margin: 0 0 1rem;
}
.amplication-base b,
.amplication-base strong {
  font-weight: bolder;
}
.amplication-base small {
  font-size: 80%;
}
.amplication-base sub,
.amplication-base sup {
  position: relative;
  font-size: 75%;
  line-height: 0;
  vertical-align: baseline;
}
.amplication-base sub {
  bottom: -0.25em;
}
.amplication-base sup {
  top: -0.5em;
}
.amplication-base a {
  color: var(--primary);
  text-decoration: none;
  background-color: transparent;
}
.amplication-base a:hover {
  color: var(--hover);
  text-decoration: underline;
}
.amplication-base a:not([href]):not([class]) {
  color: inherit;
  text-decoration: none;
}
.amplication-base a:not([href]):not([class]):hover {
  color: inherit;
  text-decoration: none;
}
.amplication-base pre,
.amplication-base code,
.amplication-base kbd,
.amplication-base samp {
  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
    "Courier New", monospace;
  font-size: 1em;
}
.amplication-base pre {
  margin-top: 0;
  margin-bottom: 1rem;
  overflow: auto;
  -ms-overflow-style: scrollbar;
}
.amplication-base figure {
  margin: 0 0 1rem;
}
.amplication-base img {
  vertical-align: middle;
  border-style: none;
}
.amplication-base svg {
  overflow: hidden;
  vertical-align: middle;
}
.amplication-base caption {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  color: #6c757d;
  text-align: left;
  caption-side: bottom;
}
.amplication-base th {
  text-align: inherit;
}
.amplication-base label {
  display: inline-block;
  margin-bottom: 0.5rem;
}
.amplication-base button {
  border-radius: 0;
}
.amplication-base button:focus {
  outline: 1px dotted;
  outline: 5px auto -webkit-focus-ring-color;
}
.amplication-base input,
.amplication-base button,
.amplication-base select,
.amplication-base optgroup,
.amplication-base textarea {
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}
.amplication-base button,
.amplication-base input {
  overflow: visible;
}
.amplication-base button,
.amplication-base select {
  text-transform: none;
}
.amplication-base [role="button"] {
  cursor: pointer;
}
.amplication-base select {
  word-wrap: normal;
}
/* ... */

